codama-macros/tests/codama_attribute/type_nodes/number_type_node/format_missing.fail.stderr
error: format is missing
 --> tests/codama_attribute/type_nodes/number_type_node/format_missing.fail.rs:3:17
  |
3 | #[codama(type = number(le))]
  |                 ^^^^^^^^^^

error: format is missing
 --> tests/codama_attribute/type_nodes/number_type_node/format_missing.fail.rs:6:17
  |
6 | #[codama(type = number(endian = le))]
  |                 ^^^^^^^^^^^^^^^^^^^
