codama-macros/tests/codama_attribute/type_nodes/number_type_node/format_missing.fail.rs
use codama_macros::codama;

#[codama(type = number(le))]
pub struct Test;

#[codama(type = number(endian = le))]
pub struct TestExplicit;

fn main() {}
